fix overflow

--- a/oshare-front-app/src/app/shared/post-list/post-item/post-item.component.css
+++ b/oshare-front-app/src/app/shared/post-list/post-item/post-item.component.css
@@ -5,3 +5,13 @@
     word-break:break-all;
     overflow: hidden;
 }
+@media only screen and (min-width: 1500px) {
+  .card {
+    min-width: 360px
+  }
+}
+@media only screen and (max-width: 1500px) {
+  .card {
+    min-width: 350px
+  }
+}
